DevOps-Tools/ingress-cert-manager/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: nginx-ingress
spec:
  tls:
    - hosts: 
      - nginx-cluster.local
      secretName: selfsigned-cert-tls # This secret is created by cert-manager and contains the self-signed certificate
  rules:
  - host: nginx-cluster.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
